fix label text going out of bounds

--- a/src/components/ImageTagger/ImageTagger.css
+++ b/src/components/ImageTagger/ImageTagger.css
@@ -8,3 +8,6 @@
     }   
 }
 
+.change-font {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
